--- a/ue02_typescript/assets/liste.html
+++ b/ue02_typescript/assets/liste.html
@@ -6,11 +6,15 @@
         <!-- Kommentar -->
         </head>
         <body>
-            <h1>Liste</h1>
-            <p>Hier sollte die <b>Liste</b> stehen</p>
+            <h1 style="background-color: cyan; margin-bottom: 30pt">Liste</h1>
+            <div style="background-color:hotpink">
+                <p>Hier sollte die <b>Liste</b> stehen</p>
+                <p>Herr <span style="color: red">Rossi</span> sucht das Glück</p>
+            </div>
+            
             <a href="https://de.wikipedia.org/wiki/Hypertext_Markup_Language">
                 Link zu Wikipedia
             </a>
-            <img src="image.png" alt="Pinguin"/> 
+            <img src="image.png"></img>
         </body>
     </html>
