--- a/ue02_typescript/assets/cssexternal.html
+++ b/ue02_typescript/assets/cssexternal.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<!-- https://www.w3schools.com/html_css.asp -->
 <html>
     <head>
-        <link rel = "stylesheet" href = "mystyle.css">
+        <link rel="stylesheet" href="mystyle.css">
     </head>
     <body>
-        <h1>This <span id="xyz">is</span> a header</h1>
-        <div class="green">
-            <p>This is a paragraph.</p>
+        <h1>This is a heading</h1>
+        <p>This <span id="xyz"> is </span> a paragraph.</p>
+        <div class="yellow">
+            Herr Rossi fand das Glück.
+        </div>
+        <p>Herr Rossi ist nicht mehr bekannt.</p>
+        <div class="yellow">
+            Wer kennt noch Herr Rossi?
         </div>
     </body>
 </html>
