--- a/ue02_typescript/assets/cssinternal.html
+++ b/ue02_typescript/assets/cssinternal.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
-<!-- https://www.w3schools.com/html_css.asp -->
 <html>
     <head>
         <style>
             body {background-color: powderblue;}
             h1   {color: blue;}
+            p    {color: red;}
             #xyz {color: black;}
-            div.green {color: green;}
+            div.yellow {color: yellow;}
+
         </style>
     </head>
     <body>
-        <h1>This <span id="xyz">is</span> a heading</h1>
-        <div class="green">
-            <p>This is a paragraph.</p>
+        <h1>This is a heading</h1>
+        <p>This <span id="xyz"> is </span> a paragraph.</p>
+        <div class="yellow">
+            Herr Rossi fand das Glück.
+        </div>
+        <p>Herr Rossi ist nicht mehr bekannt.</p>
+        <div class="yellow">
+            Wer kennt noch Herr Rossi?
         </div>
     </body>
 </html>
