--- a/ue02_typescript/assets/liste.html
+++ b/ue02_typescript/assets/liste.html
@@ -2,6 +2,9 @@
 <!DOCTYPE html>
     <html>
         <head>
+                <meta charset="utf-8">
+                <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+                <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
             <title>FIV Liste</title>
         <!-- Kommentar -->
         </head>
@@ -15,6 +18,7 @@
             <a href="https://de.wikipedia.org/wiki/Hypertext_Markup_Language">
                 Link zu Wikipedia
             </a>
+            <button type="button" class="btn btn-primary">Drück mich</button>
             <img src="image.png"></img>
         </body>
     </html>
